syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ChavePix";

package com.zupacademy.henio.pix;

import "google/protobuf/timestamp.proto";

service KeymanagerRegistraGrpcService {

  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

enum TipoConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

message RegistraChavePixRequest {
  string clienteId        = 1;
  TipoChave tipoDeChave = 2;
  string chave            = 3;
  TipoConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId     = 2;
}
